@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-02-24  Michael Jahn
+	* Amazon posters: removing of temporary files fixed
+
 2009-02-12  Piotr Ożarowski
 	* Add new default tag: "Buy me"
 
